# wav-recorder

./: .editorconfig  Cargo.toml  LICENSE  README.md
src/: main.rs  record.rs
